@@ -20,14 +20,14 @@ namespace {
 fostlib::yaml::record &fostlib::yaml::record::add(
     const fostlib::string &k, fostlib::t_null
 ) {
-    push_back( content, k + ": ~" );
+    ::push_back( content, k + ": ~" );
     return *this;
 }
 
 fostlib::yaml::record &fostlib::yaml::record::add(
     const fostlib::string &k, const fostlib::string &v
 ) {
-    push_back( content, k + ": " + v );
+    ::push_back( content, k + ": " + v );
     return *this;
 }
 
@@ -36,11 +36,10 @@ fostlib::yaml::record &fostlib::yaml::record::add(
 ) {
     if ( &v == this )
         throw fostlib::exceptions::not_implemented(
-            "fostlib::yaml::record::add -- recursively adding a record to itself"
-        );
-    push_back(content, k + ": [");
+            "fostlib::yaml::record::add -- recursively adding a record to itself");
+    ::push_back(content, k + ": [");
     for ( collection_type::const_iterator i = v.content.begin(); i != v.content.end(); ++i )
-        push_back(content, i->second, i->first + 1);
-    push_back(content, "]");
+        ::push_back(content, i->second, i->first + 1);
+    ::push_back(content, "]");
     return *this;
 }
