@@ -1,3 +1,7 @@
+2010-08-15  Kirit Saelensminde  <kirit@felspar.com>
+ Data handling
+ - Started adding a push_back function that allows consistent pushing back of data across a wide range of types.
+
 2010-04-28  Kirit Saelensminde  <kirit@felspar.com>
  Threading
  - Added accessors to future so that we can see if there is an exception or a if future (result) is available.
